# qstab

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  setup.py
qstab/: __init__.py
qstab/data/: __init__.py  entity.py  formatter.py  question.py
qstab/perturbations/: __init__.py  base.py  random_drug.py  sampling.py  scrambling.py  shuffle_indices.py  utils.py
scripts/: drug-perturb.py  flant5_large_tune.sh  medalpaca_tune.sh  run_hf_entity.py  run_medalpaca_entity.py
test/: data.py  example_question.json  test_perturbations.py
