[build-system]
requires = [ 
        "flit_core >=3.2,<4",
        "python_version >= '3.7'",
        ]
build-backend = "flit_core.buildapi"

[project]
name = "qstab"
authors = [{name = "people", email = "abbasilabucsf@gmail.com"}]
readme = "README.md"
license = {file = "LICENSE"}
classifiers = ["License :: OSI Approved :: MIT License"]
dynamic = ["version", "description"]
dependencies = [ 
    "pytest",
    "numpy",
    "scipy",
    "matplotlib",
    "scikit-learn",
    "transformers",

]

[project.urls]
Home = ""
